# makefile-analyser

./: Cargo.toml  LICENSE.md  README.md
src/: filter.rs  lib.rs  main.rs  parser.rs  types.rs
