[package]
name = "makeparse"
version = "0.1.0"
authors = ["Brandon Henry <brandon@bhenry.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
clap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
log = "0.4"
simplelog = "0.7"